--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,10 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.ldap</groupId>
+			<artifactId>spring-ldap-core</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
