securing application with Spring security using UserDetailsService and getting logged in user's info using @AuthenticationPrincipal
Changed DB to Postgresql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+## PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/taco-cloud
+spring.datasource.username=postgres
+spring.datasource.password=S@tyam8218724624
 
+spring.jpa.hibernate.ddl-auto= none
