Adding configuration properties in Spring.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.username=postgres
 spring.datasource.password=S@tyam8218724624
 
 spring.jpa.hibernate.ddl-auto= none
+
+taco.orders.page-size=208
