--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.password=S@tyam8218724624
 spring.jpa.hibernate.ddl-auto= none
 
 taco.orders.page-size=20
+
+spring.data.rest.base-path = /api
+
