--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ taco.orders.page-size=20
 spring.data.rest.base-path = /api
 
 spring.jms.template.default-destination=tacocloud.order.queue
+
+spring.kafka.bootstrap-servers= kafka.tacocloud.com:9092,kafka.tacocloud.com:9093,kafka.tacocloud.com:9094
