Sending message through Kafka with default topic name in sendDefault.
Default topic name is configured in application.properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.data.rest.base-path = /api
 spring.jms.template.default-destination=tacocloud.order.queue
 
 spring.kafka.bootstrap-servers= kafka.tacocloud.com:9092,kafka.tacocloud.com:9093,kafka.tacocloud.com:9094
+
+spring.kafka.template.default-topic=tacocloud.orders.topic
