few kafka changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/taco-cloud
 spring.datasource.username=postgres
-spring.datasource.password=S@tyam8218724624
+spring.datasource.password=mypassword
 
 spring.jpa.hibernate.ddl-auto= none
 
@@ -14,3 +14,6 @@ spring.jms.template.default-destination=tacocloud.order.queue
 spring.kafka.bootstrap-servers= kafka.tacocloud.com:9092,kafka.tacocloud.com:9093,kafka.tacocloud.com:9094
 
 spring.kafka.template.default-topic=tacocloud.orders.topic
+spring.kafka.consumer.group-id = group123
+spring.kafka.client-id	= saty123
+spring.kafka.consumer.client-id	= saty345-1
