--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,13 @@ spring.kafka.template.default-topic=tacocloud.orders.topic
 spring.kafka.consumer.group-id = group123
 spring.kafka.client-id	= saty123
 spring.kafka.consumer.client-id	= saty345-1
+
+tacocloud:
+email:
+host: imap.tacocloud.com
+mailbox: INBOX
+username: taco-in-flow
+password: 1L0v3T4c0s
+poll-rate: 10000
+api:
+url: http://api.tacocloud.com
